--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-C53H517\\SQLEXPRESS; Database=HamroShoppingAppDb; Trusted_Connection=True; TrustServerCertificate=True; Connection Timeout=30;Max Pool Size=200"
+  },
   "AllowedHosts": "*"
 }
