--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,13 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=DESKTOP-C53H517\\SQLEXPRESS; Database=HamroShoppingAppDb; Trusted_Connection=True; TrustServerCertificate=True; Connection Timeout=30;Max Pool Size=200"
   },
+  "Authentication": {
+    "JwtBearer": {
+      "IsEnabled": "false",
+      "SecurityKey": "HamroShopping_C011Bjjjjjjjjjjjjjjjjj1642CDF4FDE",
+      "Issuer": "https://localhost:7171/",
+      "Audience": "https://localhost:7171/"
+    }
+  },
   "AllowedHosts": "*"
 }
