File store and category services completed

--- a/HamroShoppingApp.csproj
+++ b/HamroShoppingApp.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Hosting" Version="2.2.7" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.0">
@@ -25,9 +26,9 @@
   <ItemGroup>
     <Folder Include="RepoPattern\Order\DTO\" />
     <Folder Include="RepoPattern\Rating\DTO\" />
-    <Folder Include="RepoPattern\Product\DTO\" />
     <Folder Include="RepoPattern\OrderDetail\DTO\" />
     <Folder Include="RepoPattern\Cart\DTO\" />
+    <Folder Include="Resources\Images\" />
   </ItemGroup>
 
 </Project>
