--- a/HamroShoppingApp.csproj
+++ b/HamroShoppingApp.csproj
@@ -25,6 +25,7 @@
 
   <ItemGroup>
     <Folder Include="Resources\Images\" />
+    <Folder Include="wwwroot\products\" />
   </ItemGroup>
 
 </Project>
