--- a/HamroShoppingApp.csproj
+++ b/HamroShoppingApp.csproj
@@ -24,6 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="ReactJs\" />
     <Folder Include="Resources\Images\" />
     <Folder Include="wwwroot\products\" />
   </ItemGroup>
