--- a/ReactJS/package.json
+++ b/ReactJS/package.json
@@ -17,6 +17,7 @@
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-login": "^5.2.2",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "stream-browserify": "^3.0.0",
