--- a/appsettings.json
+++ b/appsettings.json
@@ -8,6 +8,9 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=DESKTOP-C53H517\\SQLEXPRESS; Database=HamroShoppingAppDb; Trusted_Connection=True; TrustServerCertificate=True; Connection Timeout=30;Max Pool Size=200"
   },
+  //"ConnectionStrings": {
+  //  "DefaultConnection": "Data Source=sql.bsite.net\\MSSQL2016 ; Persist Security Info=True;User ID=abiskar_;Password=@biskar3210"
+  //},
   "Jwt": {
     "Issuer": "Issuer",
     "Audience": "Audience",
