--- a/appsettings.json
+++ b/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-C53H517\\SQLEXPRESS; Database=HamroShoppingAppDb; Trusted_Connection=True; TrustServerCertificate=True; Connection Timeout=30;Max Pool Size=200"
+    "DefaultConnection": "Server=DESKTOP-C53H517\\SQLEXPRESS; Database=HamroShoppingAppDb; Trusted_Connection=True; TrustServerCertificate=True; Connection Timeout=30;Max Pool Size=200;MultipleActiveResultSets=True"
   },
   "Jwt": {
     "Issuer": "Issuer",
